--- a/assets/styles/_modals.scss
+++ b/assets/styles/_modals.scss
@@ -267,6 +267,11 @@ body {
           @media (max-width: 575px) {
             padding: 2rem;
         }
+
+        .icon-arrow-white {
+          position: absolute;
+            bottom: 20%;
+        }
       }
 
       .card-title {
