--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "normalize";
 @import "fonts";
 @import "variables";
+@import "animate";
 @import "colors";
 @import "mixins";
 @import "utils";
