--- a/assets/styles/_widgets.scss
+++ b/assets/styles/_widgets.scss
@@ -5,7 +5,7 @@
         font-size: 11px;
         letter-spacing: 3px;
         font-weight: 600;
-        @include helvetica;
+        @include graphik;
     }
     h4, h6 {
         color: #98AFC2;
