--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -18,7 +18,7 @@ body {
     font-size: 20px;
     color: $gray-dark;
     overflow-x: hidden;
-    @include serif-font;
+    @include graphik;
 }
 
 p {
@@ -59,7 +59,7 @@ h5 {
     font-size: 11px;
     letter-spacing: 3px;
     font-weight: 600;
-    @include helvetica;
+    @include graphik;
 }
 
 p {
@@ -175,5 +175,9 @@ section,
 footer {
     padding: 40px 0;
     overflow: hidden;
+
+    @media(max-width: 768px) {
+        overflow: initial;
+    }
 }
 
