--- a/assets/styles/_modals.scss
+++ b/assets/styles/_modals.scss
@@ -184,6 +184,26 @@ body {
       @media(max-width: 575px) {
         display: none;
       }
+
+      .slick-dots {
+        bottom: -71px;
+        z-index: 1000;
+      }
+
+      .slick-dots li button:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "\2022";
+        width: 20px;
+        height: 20px;
+        font-family: slick;
+        font-size: 10px;
+        line-height: 20px;
+        text-align: center;
+        color: white;
+        -moz-osx-font-smoothing: grayscale;
+      }
     }
 
     #recentProjectsMobile {
@@ -191,7 +211,7 @@ body {
 
       @media(max-width: 575px) {
         display: block;
-      } 
+      }
     }
   }
 
@@ -240,21 +260,21 @@ body {
           .card-img-overlay {
           opacity: 1;
         }
-        }
+      }
 
-        img {
-          transition: all 0.2s linear;
-          object-fit: cover;
+      img {
+        transition: all 0.2s linear;
+        object-fit: cover;
+        max-height: 100%;
+        height: 400px;
+
+        @media (max-width: 575px) {
           max-height: 100%;
-          height: 400px;
-
-          @media (max-width: 575px) {
-              max-height: 100%;
-            height: 275px;
-          }
+          height: 275px;
         }
+      }
 
-        .card-img {
+      .card-img {
           border-radius: 0;
       }
 
@@ -262,9 +282,9 @@ body {
         opacity: 0;
         padding: 4rem;
         transition: all 0.2s linear;
-          background: rgba(14, 24, 32, .9);
+        background: rgba(14, 24, 32, .9);
 
-          @media (max-width: 575px) {
+        @media (max-width: 575px) {
             padding: 2rem;
         }
 
