--- a/assets/styles/_utils.scss
+++ b/assets/styles/_utils.scss
@@ -3,7 +3,7 @@
     font-size: 11px;
     letter-spacing: 3px;
     font-weight: 600;
-    @include helvetica;
+    @include graphik;
 }
 
 a.section-highlight {
