--- a/assets/styles/_modals.scss
+++ b/assets/styles/_modals.scss
@@ -234,6 +234,10 @@ body {
       align-items: center;
       padding: 7.5px 0;
 
+      @media (max-width: 991px) {
+        max-width: 400px;
+      }
+
       .right-arrow,
       .left-arrow,
       .paging-info {
