fixes high priority issues

--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
-	font-family: 'Eames-Century-Book';
-	src: url('../fonts/EamesCentury/EamesCenturyModern-Book.eot');
-	src: url('../fonts/EamesCentury/EamesCenturyModern-Book.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/EamesCentury/EamesCenturyModern-Book.woff2') format('woff2'),
-		url('../fonts/EamesCentury/EamesCenturyModern-Book.woff') format('woff'),
-		url('../fonts/EamesCentury/EamesCenturyModern-Book.ttf') format('truetype'),
-		url('../fonts/EamesCentury/EamesCenturyModern-Book.svg#EamesCenturyModern-Book') format('svg');
+	font-family: 'Eames-Century-BookItalic';
+	src: url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.eot');
+	src: url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.woff2') format('woff2'),
+		url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.woff') format('woff'),
+		url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.ttf') format('truetype'),
+		url('../fonts/EamesCentury/EamesCenturyModern-BookItalic.svg#EamesCenturyModern-BookItalic') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
