--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -84,7 +84,7 @@
 }
 
 @mixin eames-century-book() {
-    font-family: 'Eames-Century-Book', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+    font-family: 'Eames-Century-BookItalic', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
 
 
