--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -63,7 +63,7 @@
 		    position: absolute;
 		    font-weight: 300;
 		    font-size: 14px;
-		    letter-spacing: 4px;
+		    letter-spacing: 0.9px;
 		    @include sans-serif-font;
 
 		    &:hover, &:focus {
@@ -82,6 +82,11 @@
 }
 
 .intro {
+	margin-top: 150px;
+	@media (max-width: 768px) {
+		margin-top: 0;
+	}
+
 	h2 {
     	font-size: 43px;
     	line-height: 1.3;
@@ -275,7 +280,6 @@
 	blockquote {
 		@include eames-century-book;
 		font-size: 32px;
-		font-style: italic;
 
 		@media (max-width: 768px) {
 			font-size: 28px;
