--- a/assets/styles/_modals.scss
+++ b/assets/styles/_modals.scss
@@ -165,6 +165,7 @@ body {
       visibility:hidden;
       opacity:0;
       max-height: 400px;
+      margin-bottom: 0;
 
       +.loader {
         display: block !important;
@@ -186,7 +187,7 @@ body {
       }
 
       .slick-dots {
-        bottom: -71px;
+        bottom: -42px;
         z-index: 1000;
       }
 
