--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -29,7 +29,7 @@
 			height: 600px;
 
 			@media (max-width: 768px) {
-				height: 400px;
+				height: 500px;
 			}
 		}
 
@@ -94,7 +94,7 @@
 		@include header-font;
 
 		@media (max-width: 575px) {
-			font-size: 40px;
+			font-size: 24px;
 		}
 	}
 
@@ -135,6 +135,11 @@
     	font-size: 38px;
 		letter-spacing: 0.6px;
 		@include header-font;
+
+		@media (max-width: 575px) {
+    		font-size: 24px;
+    		margin-bottom: 0.5rem !important;
+		}
 	}
 
 	p {
@@ -197,13 +202,16 @@
 			    background: rgba(14, 24, 32, .9);
 
 			    @media (max-width: 575px) {
-			     	opacity: 1;
 			     	padding: 2rem;
 				}
 
 				.icon-arrow-white {
 					position: absolute;
     				bottom: 20%;
+
+    				@media (max-width: 575px) {
+				     	display: none;
+					}
 				}
 			}
 
@@ -228,6 +236,8 @@
 
 			    @media (max-width: 768px) {
 			        margin-bottom: 10px;
+			        font-size: 14px;
+				    letter-spacing: 1px;
 				}
 			}
 	    }
@@ -269,6 +279,10 @@
 	.carousel-control-next, .carousel-control-prev {
 		width: 26%;
 
+		@media (max-width: 768px) {
+			width: 20%;
+		}
+
 		i {
 			transition: margin-top 0.2s linear;
 			&:hover {
@@ -307,7 +321,8 @@
 		font-size: 32px;
     	letter-spacing: 0.6px;
     	@include header-font;
-    	margin-bottom: 110px;
+    	margin-top: 65px;
+    	margin-bottom: 40px;
 
     	@media (max-width: 768px) {
     		font-size: 28px;
