--- a/assets/styles/_our-team.scss
+++ b/assets/styles/_our-team.scss
@@ -9,7 +9,7 @@
 	    transition: all 0.2s linear;
 
 	    @media (max-width: 768px) {
-			height: 400px;
+			height: 500px;
 		}
 
 		img {
@@ -36,6 +36,18 @@
 }
 
 .our-team {
+
+	.col-lg-8 {
+		padding-right: 15px;
+    	padding-left: 15px;
+
+    	.col-md-3.col-6 {
+    		margin-bottom: 15px;
+    		padding-right: 7.5px !important;
+    		padding-left: 7.5px !important;
+    	}
+	}
+
 	h2 {
 		font-size: 32px;
     	letter-spacing: 0.6px;
@@ -56,6 +68,12 @@
 
 	.card-title {
 		font-size: 18px;
+		@include avenir-light;
+
+		@media(max-width: 575px) {
+			font-size: 16px;
+			letter-spacing: 0.2px;
+		}
 	}
 
 	.card-text {
@@ -63,6 +81,11 @@
 	    font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
 	    font-weight: 300;
 	    letter-spacing: 1px;
+
+	    @media(max-width: 575px) {
+			font-size: 13px;
+			letter-spacing: 0.8px;
+		}
 	}
 }
 
@@ -81,7 +104,7 @@
 			height: 600px;
 
 			@media (max-width: 768px) {
-				height: 400px;
+				height: 500px;
 			}
 		}
 
