adds spacing tweaks

--- a/assets/styles/_case-study.scss
+++ b/assets/styles/_case-study.scss
@@ -119,6 +119,7 @@ body.case-study-template-default {
 	}
 
 	.more-projects {
+		margin-top: 100px;
 		h2 {
 			font-size: 32px;
 			letter-spacing: 0.6px;
